--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "expo": "^54.0.27",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.10",
+    "expo-fast-image": "^1.1.3",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
